Removal of legacy css rule causing clipping of pod donut arrows. Fixes https://github.com/openshift/origin-web-console/issues/1091

--- a/app/styles/_components.less
+++ b/app/styles/_components.less
@@ -309,7 +309,6 @@ code.command {
 
 .deployment-donut {
   justify-content: center;
-  min-width: 200px;
   .scaling-controls {
     justify-content: center;
     font-size: 24px;
